# plot-genius

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  check_dependencies.sh  imgui.ini  install_dependencies_linux.sh
docs/: design.md
src/: CMakeLists.txt  main.cpp
src/application/: app.cpp  app.hpp  window.cpp  window.hpp
src/config/: config.cpp  config.hpp
src/core/: logger.cpp  logger.hpp
src/equation/: parser.cpp  parser.hpp
src/graph/: graph.cpp  graph.hpp
src/rendering/: renderer.cpp  renderer.hpp
src/ui/: config_panel.cpp  config_panel.hpp  equation_panel.cpp  equation_panel.hpp  graph_panel.cpp  graph_panel.hpp  style.cpp  style.hpp  window.cpp  window.hpp
src/util/: logger.cpp  logger.hpp
